--- a/SuperFuncular/SuperFuncular/SuperFuncular.csproj
+++ b/SuperFuncular/SuperFuncular/SuperFuncular.csproj
@@ -6,9 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="4.19.4" />
-    <PackageReference Include="more.xunit" Version="2.2.3" />
-    <PackageReference Include="more.xunit.runner.visualstudio" Version="2.2.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
+    <PackageReference Include="xunit" Version="2.2.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
